fix date picker month and year select jumping issue

--- a/css/base.css
+++ b/css/base.css
@@ -6664,12 +6664,9 @@ legend + .form-group {
 
 .picker__select--month,
 .picker__select--year {
-  border-bottom: 0;
+  border-bottom-color: transparent !important;
   display: inline-block;
-  height: 20px;
   margin-left: 16px;
-  padding-top: 0;
-  padding-bottom: 0;
   width: auto;
 }
 .picker__select--month:first-child,
@@ -6677,12 +6674,6 @@ legend + .form-group {
   margin-left: 0;
 }
 
-@media only screen and (-webkit-min-device-pixel-ratio: 0) {
-  select.picker__select--month,
-  select.picker__select--year {
-    background-position: 100% 50%;
-  }
-}
 .picker__table {
   border-collapse: collapse;
   border-spacing: 0;
