--- a/sass/element/_form-adv-datepicker.scss
+++ b/sass/element/_form-adv-datepicker.scss
@@ -238,22 +238,12 @@
 .picker__select--month,
 .picker__select--year {
 	@extend .form-control;
-	border-bottom: 0;
+	border-bottom-color: transparent !important;
 	display: inline-block;
-	height: $line-height;
 	margin-left: $grid-gutter;
-	padding-top: 0;
-	padding-bottom: 0;
 	width: auto;
 	&:first-child {
 		margin-left: 0;
-	}
-}
-
-@media only screen and (-webkit-min-device-pixel-ratio: 0) {
-	select.picker__select--month,
-	select.picker__select--year {
-		background-position: 100% 50%;
 	}
 }
 
